# drf-json-schema

./: .editorconfig  .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  Pipfile  README.rst  noxfile.py  requirements-test.txt  requirements.txt  setup.cfg  setup.py  start  tox.ini
.github/workflows/: main-workflow.yml
rest_framework_json_schema/: __init__.py  apps.py  auto.py  datetime.py  exceptions.py  filters.py  helpers.py  models.py  negotiation.py  pagination.py  parsers.py  relations.py  renderers.py  schema.py  transforms.py  utils.py
rest_framework_json_schema/dummy/: settings.py  urls.py  wsgi.py
rest_framework_json_schema/migrations/: __init__.py
rest_framework_json_schema/test_support/: serializers.py  urls.py  views.py
rest_framework_json_schema/tests/: test_filters.py  test_negotiation.py  test_pagination.py  test_parsers.py  test_renderers.py  test_schema.py  test_utils.py
tests/: .pydocstyle  conftest.py  test_auto.py  test_filters.py  test_negotiation.py  test_pagination.py  test_parsers.py  test_renderers.py  test_schema.py  test_transforms.py  test_utils.py
tests/dummy/: settings.py  urls.py
tests/support/: decorators.py  serializers.py  urls.py  views.py
