[metadata]
license-file = LICENSE.txt

[flake8]
max-complexity = 15
# E501 (line too long) is enforced intelligently by black
# E701 (multiple statements on one line (colon))
# is currently is a false-positive with type annotations:
# https://github.com/PyCQA/pycodestyle/pull/640
# E203 (whitespace before ':') is not PEP8 compliant
# W503 (line break before binary operator) is not PEP8 compliant
# F811 (redefinition of unused) breaks with @overload
ignore = E501 E701 E203 W503 F811

[pydocstyle]
# D202: No blank lines allowed after function docstring conflicts with black
# D203: 1 blank line required before class docstring (not PEP257)
# D212: Multi-line docstring summary should start at the first line (PEP257 allows this)
ignore = D202,D203,D212

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True
warn_redundant_casts = True
warn_unused_ignores = True

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.dummy.settings
